welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	var j:Int = 0;
	while (!(getX()==getMondeLargeur() && getY()==getMondeHauteur())) {
		ecritMessage(string_of_int(j));
		if (getY()==getMondeHauteur()) {
			setPos(getX() +1, 0);
		}
		else setPos(getX(), getY() + 1);
	j = j + 1;
	}
	ecritMessage("48");
}
